--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
 						name="user_phone" 
 						class="modal-form-input" 
 						required 
-						pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-						title="xxx-xxx-xx-xx"
+						pattern="[0-9]{3} [0-9]{3} [0-9]{4}"
+						title="096 555 4444"
 						/>
 						<span class="modal-form-input-icon">
 						<svg class="form-icon" width="18px" height="18px">
